# skills-store

./: .gitignore  LICENSE  README.md  install-local.sh  install.sh  install_strategy.sh  reinstall.sh  skills-lock.json
.agents/skills/skills-store/: SKILL.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  lib.rs  main.rs  onchainos.rs  update.rs
cli/src/commands/: dapp_aave.rs  dapp_ethena.rs  mod.rs  strategy_auto_rebalance.rs  strategy_grid.rs  strategy_memepump_scanner.rs  strategy_ranking_sniper.rs  strategy_signal_tracker.rs
cli/src/dapp/: mod.rs
cli/src/dapp/aave/: client.rs
cli/src/dapp/compound/: mod.rs
cli/src/dapp/ethena/: client.rs
cli/src/dapp/kalshi/: auth.rs
cli/src/dapp/morpho/: vault.rs
cli/src/dapp/polymarket/: auth.rs
cli/src/dapp/uniswap/: client.rs
cli/src/strategy/auto_rebalance/: config.rs  daemon.rs  executor.rs  safety_monitor.rs  state.rs
cli/src/strategy/grid/: client.rs  config.rs  engine.rs  state.rs
cli/src/strategy/memepump_scanner/: client.rs  engine.rs  state.rs
cli/src/strategy/ranking_sniper/: client.rs  config.rs  engine.rs  state.rs
cli/src/strategy/signal_tracker/: client.rs  config.rs  engine.rs  state.rs
cli/tests/: cli_aave.rs  cli_polymarket.rs
docs/cli/: Cargo.toml
docs/cli/src/: chains.rs  client.rs  crypto.rs  home.rs  keyring_store.rs  main.rs  output.rs  wallet_api.rs  wallet_store.rs
docs/cli/src/commands/: gateway.rs  market.rs  memepump.rs  mod.rs  portfolio.rs  security.rs  signal.rs  swap.rs  token.rs
docs/cli/src/commands/agentic_wallet/: account.rs  auth.rs  balance.rs  chain.rs  history.rs  mod.rs  transfer.rs  wallet.rs
docs/cli/src/mcp/: mod.rs
docs/cli/tests/: cli_market.rs  cli_token.rs  mcp_server.rs
docs/skills/okx-agentic-wallet/: SKILL.md
docs/skills/okx-agentic-wallet/references/: cli-reference.md
docs/skills/okx-dex-market/: SKILL.md
docs/skills/okx-dex-market/references/: cli-reference.md
docs/skills/okx-dex-signal/: SKILL.md
docs/skills/okx-dex-swap/: SKILL.md
docs/skills/okx-dex-swap/references/: cli-reference.md
docs/skills/okx-dex-token/: SKILL.md
docs/skills/okx-dex-trenches/: SKILL.md
docs/skills/okx-onchain-gateway/: SKILL.md
docs/skills/okx-wallet-portfolio/: SKILL.md
docs/skills/okx-wallet-security/: SKILL.md
docs/skills/okx-wallet-security/references/: cli-reference.md
skills/dapp-aave/: SKILL.md
skills/dapp-composer/: SKILL.md
skills/dapp-ethena/: SKILL.md
skills/dapp-hyperliquid/: SKILL.md
skills/dapp-kalshi/: SKILL.md
skills/dapp-morpho/: SKILL.md
skills/dapp-polymarket/: SKILL.md
skills/dapp-uniswap/: SKILL.md
skills/plugin-store/: SKILL.md
skills/skills-store/: SKILL.md
skills/strategy-auto-rebalance/: SKILL.md
skills/strategy-grid-trade/: SKILL.md
skills/strategy-memepump-scanner/: SKILL.md
skills/strategy-ranking-sniper/: SKILL.md
skills/strategy-signal-tracker/: SKILL.md
