[package]
name = "plugin-store-cli"
version = "1.0.22"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "plugin-store"
path = "src/main.rs"

[[bin]]
name = "strategy-auto-rebalance"
path = "src/bin/strategy_auto_rebalance.rs"

[[bin]]
name = "strategy-grid"
path = "src/bin/strategy_grid.rs"

[[bin]]
name = "strategy-memepump-scanner"
path = "src/bin/strategy_memepump_scanner.rs"

[[bin]]
name = "strategy-ranking-sniper"
path = "src/bin/strategy_ranking_sniper.rs"

[[bin]]
name = "strategy-signal-tracker"
path = "src/bin/strategy_signal_tracker.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
dirs = "6"
tabled = "0.17"
chrono = { version = "0.4", features = ["clock"] }

# EVM on-chain interaction (read-only + onchainos-signed tx)
alloy-primitives = "1"
alloy-network = "1"
alloy = { version = "1", features = ["provider-http", "sol-types", "contract", "rpc-types"] }

# Process management (grid bot PID/signal)
libc = "0.2"

# Utils
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
